<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StageOneActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stageOne" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please turn on the switch to restore energy" />

        <Button
            android:id="@+id/onReturnResultBtnClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onReturnResultBtnClick"
            android:text="@string/returnResult" />

        <Button
            android:id="@+id/onTakeEnergyBtnClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onTakeEnergyBtnClick"
            android:text="@string/takeEnergy"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>