<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Game"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/GameField"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/Button00"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:text="0"
                android:textSize="48px" >
            </Button>

            <Button
                android:id="@+id/Button01"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="1"
                android:textColor="#FFFFFF"
                android:textSize="48px" >
            </Button>

            <Button
                android:id="@+id/Button02"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="2"
                android:textColor="#FFFFFF"
                android:textSize="48px" >
            </Button>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/GameField"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/Button03"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="3"
                android:textColor="#FFFFFF"
                android:textSize="48px" >
            </Button>

            <Button
                android:id="@+id/Button04"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="4"
                android:textColor="#FFFFFF"
                android:textSize="48px" >
            </Button>

            <Button
                android:id="@+id/Button05"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="5"
                android:textColor="#FFFFFF"
                android:textSize="48px" >
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/Button06"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="6"
                android:textColor="#FFFFFF"
                android:textSize="48px" >
            </Button>

            <Button
                android:id="@+id/Button07"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="7"
                android:textColor="#FFFFFF"
                android:textSize="48px" >
            </Button>

            <Button
                android:id="@+id/Button08"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="8"
                android:textColor="#FFFFFF"
                android:textSize="48px" >
            </Button>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/GameField2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/MoveText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moves_title"
            android:textSize="28px" >
        </TextView>

        <TextView
            android:id="@+id/FeedbackTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_title"
            android:textSize="28px" >
        </TextView>

        <TextView
            android:id="@+id/MoveCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="28px" >
        </TextView>

        <TextView
            android:id="@+id/FeedbackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_feedback_text"
            android:textSize="28px" >
        </TextView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="finish"
            android:text="finish"
            android:textSize="28px" >
        </Button>
    </LinearLayout>

    <ImageView
        android:id="@+id/source_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" >
    </ImageView>

</LinearLayout>